--- a/app/src/main/res/layout/pantry_entry.xml
+++ b/app/src/main/res/layout/pantry_entry.xml
@@ -14,14 +14,15 @@
         android:background="@drawable/my_gradient4" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/imageViewIcon"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:padding="10dp"
-        android:src="@drawable/ic_meat" />
+        android:src="@drawable/ic_meat"
+        android:layout_alignBottom="@+id/colorLayout" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -37,7 +38,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Large Text"
             android:id="@+id/txtName"
             android:textColor="#fecd7e" />
