--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -12,10 +12,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:padding="15dp"
         android:layout_toLeftOf="@+id/txtRecipeCostView"
         android:layout_toStartOf="@+id/txtRecipeCostView"
-        android:textColor="#fecd7e" />
+        android:textColor="#fecd7e"
+        android:paddingLeft="10dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,6 +28,8 @@
         android:layout_alignBottom="@+id/txtRecipeNameView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:padding="15dp"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:paddingRight="10dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp" />
 </RelativeLayout>
