--- a/app/src/main/res/layout/selected_recipe_ingredient.xml
+++ b/app/src/main/res/layout/selected_recipe_ingredient.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="5dp">
+        android:paddingTop="4dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,13 +25,13 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="center"
+            android:paddingBottom="4dp">
 
             <TextView
                 android:layout_width="wrap_content"
